# fabric-dw-mcp-cli

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  codecov.yml  justfile  pyproject.toml  server.json  wrangler.toml  zensical.toml
.claude-plugin/: marketplace.json  plugin.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/plugin/: marketplace.json
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  integration-dispatch.yml  integration.yml  pause-capacity.yml  publish.yml  release-drafter.yml  release.yml  secret-scan.yml  security.yml
docs/: authentication.md  cli.md  completion.md  concepts.md  contributing.md  index.md  install.md  integration-coverage.md  license.md  mcp-tools.md  mcp.md  security.md  skills.md  sql-pools.md  telemetry.md  troubleshooting.md
docs/commands/: audit.md  cache.md  completion.md  config.md  dbt.md  functions.md  index.md  permissions.md  procedures.md  queries.md  restore-points.md  schemas.md  settings.md  snapshots.md  sql-endpoints.md  sql-pools.md  sql.md  statistics.md  tables.md  views.md  warehouses.md  workspaces.md
docs/guides/: dbt-setup.md  index.md  ingesting-data.md  query-performance.md  tables-and-views.md  warehouse-performance.md
docs/reference/: command-tool-reference.md  exit-codes.md  mcp-capabilities.md
docs_build/: cloudflare_pages.sh
overrides/partials/integrations/analytics/: custom.html
plugins/fabric-dw/: .mcp.json
plugins/fabric-dw/.claude-plugin/: plugin.json
plugins/fabric-dw/.github/plugin/: plugin.json
plugins/fabric-dw/skills/query-optimizer/: SKILL.md
skills/dbt-setup/: SKILL.md
skills/query-optimizer/: SKILL.md
skills/warehouse-performance/: SKILL.md
src/fabric_dw/: __init__.py  _fabric_api.py  auth.py  cache.py  config.py  config_resolve.py  docgen.py  exceptions.py  http_client.py  identifiers.py  logging.py  models.py  resolver.py  sql.py  sql_client.py  sql_errors.py  sql_io.py  sql_pool.py  telemetry.py  telemetry_commands.py  types.py
src/fabric_dw/cli/: __init__.py  _context.py  _main.py  _plan_dot.py  _plan_html.py  _plan_mermaid.py  _plan_parse.py  _plan_render.py  _plan_svg.py  _render.py
src/fabric_dw/mcp/: __init__.py  _context.py  _guards.py  _helpers.py  server.py
src/fabric_dw/plan/: __init__.py  _mermaid.py  _parse.py  _render.py
src/fabric_dw/services/: __init__.py  _concurrency.py  _helpers.py  _lro.py  audit.py  capacities.py  columns.py  dbt_scaffold.py  functions.py  load.py  mask.py  ownership.py  permissions.py  procedures.py  queries.py  query_insights.py  restore.py  rls.py  schema_infer.py  schemas.py  settings.py  snapshots.py  sql_endpoints.py  sql_exec.py  sql_pools.py  statistics.py  tables.py  views.py  warehouses.py  workspaces.py
tests/: _stderr_helpers.py  conftest.py
tests/fixtures/: api_payloads.py
tests/integration/: README.md  conftest.py  test_cli_smoke.py  test_cross_cutting.py  test_journey_config_defaults.py  test_services_audit.py  test_services_create_and_load.py  test_services_create_empty_table.py  test_services_dbt_scaffold.py  test_services_functions.py  test_services_load.py  test_services_mask.py  test_services_ownership.py  test_services_permissions.py  test_services_procedures.py  test_services_queries.py  test_services_query_insights.py  test_services_restore.py  test_services_rls.py  test_services_schemas.py  test_services_settings.py  test_services_snapshots.py  test_services_sql_endpoints.py  test_services_sql_exec.py  test_services_sql_permissions.py  test_services_sql_plan.py  test_services_sql_pools.py  test_services_statistics.py  test_services_tables.py  test_services_views.py  test_services_warehouses.py  test_services_workspaces.py  test_shared_sql_endpoint_smoke.py  test_smoke.py
tests/unit/: _tool_introspection.py  conftest.py  test_app_exited_emission.py  test_auth.py  test_cache.py  test_cli_destructive_parity.py  test_cli_help_alias.py  test_cli_help_width.py  test_config.py  test_config_resolve.py  test_docgen.py  test_dual_target_coverage.py  test_entry_points.py  test_exceptions.py  test_global_options_anywhere.py  test_global_telemetry_disable.py  test_http_client.py  test_identifiers.py  test_integration_conftest_readiness.py  test_integration_sql_pools_reset.py  test_logging.py  test_models.py  test_plugin_manifests.py  test_principal_name.py  test_resolver.py  test_sanitize_stderr.py  test_server_json.py  test_services_w_series.py  test_shutdown_clean.py  test_smoke.py  test_smoke_timeout_invariant.py  test_sql.py  test_sql_client.py  test_sql_io.py  test_sql_tenant_telemetry.py  test_telemetry.py  test_telemetry_commands.py  test_tenant_from_host.py  test_types.py
tests/unit/cli/: test_cache.py  test_completion.py  test_lazy_loading.py  test_main.py  test_plan_dot.py  test_plan_fabric_fixture.py  test_plan_html.py  test_plan_mermaid.py  test_plan_parse.py  test_plan_svg.py  test_positional_right_align.py  test_render.py
tests/unit/mcp/: conftest.py  test_context.py  test_contract.py  test_instructions.py  test_procedures.py  test_security.py  test_server.py  test_server_telemetry.py
tests/unit/services/: _helpers.py  conftest.py  test_audit.py  test_capacities.py  test_capacity_skip.py  test_columns.py  test_concurrency.py  test_create_and_load.py  test_dbt_scaffold.py  test_functions.py  test_helpers.py  test_load.py  test_lro.py  test_mask.py  test_ownership.py  test_permissions.py  test_procedures.py  test_queries.py  test_query_insights.py  test_restore.py  test_rls.py  test_schema_infer.py  test_schemas.py  test_settings.py  test_snapshots.py  test_sql_endpoints.py  test_sql_exec.py  test_sql_permissions.py  test_sql_pools.py  test_statistics.py  test_tables.py  test_views.py  test_warehouses.py  test_workspaces.py
(+102 files in other folders)
