[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fabric-dw"
dynamic = ["version"]
requires-python = ">=3.11"
description = "Python CLI + MCP server for administering Microsoft Fabric Data Warehouses and SQL Analytics Endpoints"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Sam Debruyn", email = "sam@debruyn.dev" }]
maintainers = [{ name = "Sam Debruyn", email = "sam@debruyn.dev" }]
keywords = [
    "microsoft-fabric",
    "fabric",
    "data-warehouse",
    "mcp",
    "model-context-protocol",
    "cli",
    "async",
    "uvx",
    "sql-analytics-endpoint",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "azure-identity>=1.19",
    "pydantic>=2.9",
    "httpx[http2]>=0.27",
    "aiolimiter>=1.2",
    "tenacity>=9",
    "mssql-python>=0.13",
    "filelock>=3.16",
    "mcp[cli]>=1.0",
    "click>=8.2",
    "rich>=14",
    "anyio>=4",
    "aiohttp>=3.9",
    "pyarrow>=17.0",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://fdw.debruyn.dev"
Documentation = "https://fdw.debruyn.dev"
Repository = "https://github.com/sdebruyn/fabric-dw-mcp-cli"
Issues = "https://github.com/sdebruyn/fabric-dw-mcp-cli/issues"
"Release notes" = "https://github.com/sdebruyn/fabric-dw-mcp-cli/releases"

[project.scripts]
fabric-dw = "fabric_dw.cli:main"
fabric-dw-mcp = "fabric_dw.mcp.server:run"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "anyio[trio]",
    "respx>=0.21",
    "freezegun>=1.5",
    "pytest-randomly",
    "pytest-cov",
    "ruff",
]
docs = ["zensical>=0.0.42"]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/fabric_dw/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fabric_dw"]

[tool.hatch.build.targets.wheel.force-include]
"src/fabric_dw/py.typed" = "fabric_dw/py.typed"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "SIM", "ANN", "RUF", "PL",
    "C4", "DTZ", "ARG", "PT", "TRY", "LOG", "S", "FBT", "RET", "PIE",
    "TID", "ICN", "T20", "ERA", "PERF", "FURB",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101", "PLR2004"]
"src/fabric_dw/services/**" = ["PLR0913"]
# Click injects bool flags via decorators; FBT001 is a false-positive for Click commands.
# PLR0913 fires on commands with --limit/--since/--until; suppress at the CLI layer.
"src/fabric_dw/cli/**" = ["FBT001", "PLR0913"]

[tool.ruff.format]

[tool.ty]
# ty is in alpha; configuration options may expand with future releases.
# Run with: uvx ty check src tests

[tool.pytest.ini_options]
markers = ["integration: hits real Fabric APIs"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["fabric_dw"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
